fixed some small language issues and added readme

--- a/backend/lang/nl.json
+++ b/backend/lang/nl.json
@@ -72,8 +72,8 @@
 	"Welcome to :app_name! Please confirm your email address": "Welkom bij :app_name! Bevestig uw e-mailadres",
 	"🎟️ Your Ticket for :event": "🎟️ Uw ticket voor :event",
 	"Your order has been cancelled": "Uw bestelling is geannuleerd",
-	"Your order wasn\'t successful": "Uw bestelling was niet succesvol",
-	"You\'ve received a refund": "U heeft een terugbetaling ontvangen",
+	"Your order wasn\\'t successful": "Uw bestelling was niet succesvol",
+	"You\\'ve received a refund": "U heeft een terugbetaling ontvangen",
 	"Your Order is Confirmed!": "Uw bestelling is bevestigd!",
 	"We were unable to process your order": "We konden uw bestelling niet verwerken",
 	"New order for :amount for :event 🎉": "Nieuwe bestelling voor :amount voor :event 🎉",
@@ -81,7 +81,7 @@
 	"Confirm email change": "Bevestig e-mailwijziging",
 	"Password reset": "Wachtwoord resetten",
 	"Your password has been reset": "Uw wachtwoord is gereset",
-	"You\'ve been invited to join :appName": "U bent uitgenodigd om lid te worden van :appName",
+	"You\\'ve been invited to join :appName": "U bent uitgenodigd om lid te worden van :appName",
 	"Current account ID is not set": "Huidige account-ID is niet ingesteld",
 	"User not found in this account": "Gebruiker niet gevonden in dit account",
 	"User not found": "Gebruiker niet gevonden",
@@ -94,7 +94,7 @@
 	"Event daily statistics updated for event :event_id with total refunded amount of :amount": "Dagelijkse statistieken voor evenement :event_id bijgewerkt met totaal terugbetaald bedrag van :amount",
 	"Event statistics updated for event :event_id with total refunded amount of :amount": "Evenementstatistieken bijgewerkt voor evenement :event_id met totaal terugbetaald bedrag van :amount",
 	"This promo code is invalid": "Deze promocode is ongeldig",
-	"You haven\'t selected any tickets": "U heeft geen tickets geselecteerd",
+	"You haven\\'t selected any tickets": "U heeft geen tickets geselecteerd",
 	"The maximum number of tickets available for :tickets is :max": "Het maximale aantal beschikbare tickets voor :tickets is :max",
 	"You must order at least :min tickets for :ticket": "U moet minimaal :min tickets bestellen voor :ticket",
 	"The minimum amount is :price": "Het minimumbedrag is :price",
@@ -121,10 +121,10 @@
 	"Cannot check in attendee as they are not active.": "Kan bezoeker niet inchecken omdat deze niet actief is.",
 	"in": "in",
 	"out": "uit",
-	"There are no tickets available. ' .\n 'If you would like to assign a ticket to this attendee,' .\n ' please adjust the ticket\'s available quantity.": "Er zijn geen tickets beschikbaar. Als u een ticket aan deze bezoeker wilt toewijzen, pas dan de beschikbare hoeveelheid van het ticket aan.",
+	"There are no tickets available. ' .\n                    'If you would like to assign a ticket to this attendee,' .\n                    ' please adjust the ticket\\'s available quantity.": "Er zijn geen tickets beschikbaar. Als u een ticket aan deze bezoeker wilt toewijzen, pas dan de beschikbare hoeveelheid van het ticket aan.",
 	"The ticket price ID is invalid.": "De ticketprijs-ID is ongeldig.",
 	"Ticket ID is not valid": "Ticket-ID is niet geldig",
-	"There are no tickets available. If you would like to assign this ticket to this attendee, please adjust the ticket\'s available quantity.": "Er zijn geen tickets beschikbaar. Als u dit ticket aan deze bezoeker wilt toewijzen, pas dan de beschikbare hoeveelheid van het ticket aan.",
+	"There are no tickets available. If you would like to assign this ticket to this attendee, please adjust the ticket\\'s available quantity.": "Er zijn geen tickets beschikbaar. Als u dit ticket aan deze bezoeker wilt toewijzen, pas dan de beschikbare hoeveelheid van het ticket aan.",
 	"Attendee ID is not valid": "Bezoeker-ID is niet geldig",
 	"The invitation does not exist": "De uitnodiging bestaat niet",
 	"The invitation has already been accepted": "De uitnodiging is al geaccepteerd",
@@ -132,7 +132,7 @@
 	"Continue": "Doorgaan",
 	"Event :id not found": "Evenement :id niet gevonden",
 	"You cannot change the currency of an event that has completed orders": "U kunt de valuta van een evenement met voltooide bestellingen niet wijzigen",
-	"You must verify your account before you can update an event\'s status.\n You can resend the confirmation by visiting your profile page.": "U moet uw account verifiëren voordat u de status van een evenement kunt bijwerken.\n U kunt de bevestiging opnieuw verzenden door naar uw profielpagina te gaan.",
+	"You must verify your account before you can update an event\\'s status.\n                You can resend the confirmation by visiting your profile page.": "U moet uw account verifiëren voordat u de status van een evenement kunt bijwerken.\n                U kunt de bevestiging opnieuw verzenden door naar uw profielpagina te gaan.",
 	"You cannot send messages until your account is verified.": "U kunt pas berichten verzenden als uw account is geverifieerd.",
 	"Order not found": "Bestelling niet gevonden",
 	"Order already cancelled": "Bestelling al geannuleerd",
@@ -144,7 +144,7 @@
 	"This event is not live.": "Dit evenement is niet live.",
 	"Sorry, we could not verify your session. Please create a new order.": "Sorry, we konden uw sessie niet verifiëren. Maak een nieuwe bestelling aan.",
 	"There is no Stripe data associated with this order.": "Er zijn geen Stripe-gegevens gekoppeld aan deze bestelling.",
-	"There is already a refund pending for this order.\n Please wait for the refund to be processed before requesting another one.": "Er is al een terugbetaling in behandeling voor deze bestelling.\n Wacht tot de terugbetaling is verwerkt voordat u een nieuwe aanvraagt.",
+	"There is already a refund pending for this order.\n                Please wait for the refund to be processed before requesting another one.": "Er is al een terugbetaling in behandeling voor deze bestelling.\n                Wacht tot de terugbetaling is verwerkt voordat u een nieuwe aanvraagt.",
 	"Promo code :code already exists": "Promocode :code bestaat al",
 	"The code :code is already in use for this event": "De code :code wordt al gebruikt voor dit evenement",
 	"You cannot delete this question as there as answers associated with it. You can hide the question instead.": "U kunt deze vraag niet verwijderen omdat er antwoorden aan gekoppeld zijn. U kunt de vraag in plaats daarvan verbergen.",
@@ -185,7 +185,7 @@
 	"If you believe you have received this email in error,": "Als u denkt dat u deze e-mail ten onrechte heeft ontvangen,",
 	"please contact the event organizer at": "neem dan contact op met de evenementorganisator op",
 	"If you believe this is spam, please report it to": "Als u denkt dat dit spam is, meld dit dan aan",
-	"You\'re going to": "U gaat naar",
+	"You\\'re going to": "U gaat naar",
 	"Please find your ticket details below.": "Zie hieronder uw ticketdetails.",
 	"View Ticket": "Ticket bekijken",
 	"If you have any questions or need assistance, please reply to this email or contact the event organizer": "Als u vragen heeft of hulp nodig heeft, antwoord dan op deze e-mail of neem contact op met de evenementorganisator",
@@ -201,8 +201,8 @@
 	"If you have any questions or need assistance, feel free to reach out to our support team": "Als u vragen heeft of hulp nodig heeft, neem dan gerust contact op met ons supportteam",
 	"Best regards": "Met vriendelijke groet",
 	"You have received a refund of :refundAmount for the following event: :eventTitle.": "U heeft een terugbetaling ontvangen van :refundAmount voor het volgende evenement: :eventTitle.",
-	"You\'ve received a new order!": "U heeft een nieuwe bestelling ontvangen!",
-	"Congratulations! You\'ve received a new order for ": "Gefeliciteerd! U heeft een nieuwe bestelling ontvangen voor ",
+	"You\\'ve received a new order!": "U heeft een nieuwe bestelling ontvangen!",
+	"Congratulations! You\\'ve received a new order for ": "Gefeliciteerd! U heeft een nieuwe bestelling ontvangen voor ",
 	"Please find the details below.": "Zie hieronder de details.",
 	"Order Amount:": "Bestelbedrag:",
 	"Order ID:": "Bestel-ID:",
@@ -224,7 +224,7 @@
 	"Total Amount:": "Totaalbedrag:",
 	"View Order Summary & Tickets": "Besteloverzicht & tickets bekijken",
 	"If you have any questions or need assistance, feel free to reach out to our friendly support team at": "Als u vragen heeft of hulp nodig heeft, neem dan gerust contact op met ons vriendelijke supportteam via",
-	"What\'s Next?": "Wat nu?",
+	"What\\'s Next?": "Wat nu?",
 	"Download Tickets:": "Tickets downloaden:",
 	"Please download your tickets from the order summary page.": "Download uw tickets van de besteloverzichtpagina.",
 	"Prepare for the Event:": "Bereid u voor op het evenement:",
@@ -232,7 +232,7 @@
 	"Stay Updated:": "Blijf op de hoogte:",
 	"Keep an eye on your email for any updates from the event organizer.": "Houd uw e-mail in de gaten voor updates van de evenementorganisator.",
 	"Hi :name": "Hallo :name",
-	"Welcome to :appName! We\'re excited to have you aboard!": "Welkom bij :appName! We zijn blij dat u erbij bent!",
+	"Welcome to :appName! We\\'re excited to have you aboard!": "Welkom bij :appName! We zijn blij dat u erbij bent!",
 	"To get started and activate your account, please click the link below to confirm your email address:": "Om te beginnen en uw account te activeren, klik op de onderstaande link om uw e-mailadres te bevestigen:",
 	"Confirm Your Email": "Bevestig uw e-mail",
 	"If you did not create an account with us, no further action is required. Your email address will not be used without confirmation.": "Als u geen account bij ons heeft aangemaakt, is geen verdere actie nodig. Uw e-mailadres wordt niet gebruikt zonder bevestiging.",
@@ -241,7 +241,7 @@
 	"You have requested to change your email address to <b>:pendingEmail</b>. Please click the link below to confirm this change.": "U heeft verzocht om uw e-mailadres te wijzigen in <b>:pendingEmail</b>. Klik op de onderstaande link om deze wijziging te bevestigen.",
 	"If you did not request this change, please immediately change your password.": "Als u deze wijziging niet heeft aangevraagd, wijzig dan onmiddellijk uw wachtwoord.",
 	"Thanks,": "Bedankt,",
-	"You\'ve been invited to join :appName.": "U bent uitgenodigd om lid te worden van :appName.",
+	"You\\'ve been invited to join :appName.": "U bent uitgenodigd om lid te worden van :appName.",
 	"To accept the invitation, please click the link below:": "Om de uitnodiging te accepteren, klik op de onderstaande link:",
 	"Accept Invitation": "Uitnodiging accepteren",
 	"All rights reserved.": "Alle rechten voorbehouden.",
@@ -281,7 +281,7 @@
 	"Check-in list is not active yes": "Inchecklijst is nog niet actief",
 	"This attendee is not checked in": "Deze bezoeker is niet ingecheckt",
 	"Attendee does not belong to this check-in list": "Bezoeker hoort niet bij deze inchecklijst",
-	"Attendee :attendee_name\'s ticket is cancelled": "Ticket van bezoeker :attendee_name is geannuleerd",
+	"Attendee :attendee_name\\'s ticket is cancelled": "Ticket van bezoeker :attendee_name is geannuleerd",
 	"Check-in list is not active yet": "Inchecklijst is nog niet actief",
 	"The number of attendees does not match the number of tickets in the order": "Het aantal bezoekers komt niet overeen met het aantal tickets in de bestelling",
 	"Product is required": "Product is vereist",
@@ -293,10 +293,10 @@
 	"DomainObject must be a valid :interface.": "DomainObject moet een geldige :interface zijn.",
 	"Nested relationships must be an array of Relationship objects.": "Geneste relaties moeten een array van Relationship-objecten zijn.",
 	"OrderAndDirections must be an array of OrderAndDirection objects.": "OrderAndDirections moet een array van OrderAndDirection-objecten zijn.",
-	"Attendee :attendee_name\'s product is cancelled": "Product van bezoeker :attendee_name is geannuleerd",
+	"Attendee :attendee_name\\'s product is cancelled": "Product van bezoeker :attendee_name is geannuleerd",
 	"Tickets": "Tickets",
 	"There are no tickets available for this event.": "Er zijn geen tickets beschikbaar voor dit evenement.",
-	"You haven\'t selected any products": "U heeft geen producten geselecteerd",
+	"You haven\\'t selected any products": "U heeft geen producten geselecteerd",
 	"The maximum number of products available for :products is :max": "Het maximale aantal beschikbare producten voor :products is :max",
 	"You must order at least :min products for :product": "U moet minimaal :min producten bestellen voor :product",
 	"The product :product is sold out": "Het product :product is uitverkocht",
@@ -323,10 +323,10 @@
 	"Deleted": "Verwijderd",
 	"Active": "Actief",
 	"This ticket is invalid": "Dit ticket is ongeldig",
-	"There are no tickets available. ' .\n 'If you would like to assign a product to this attendee,' .\n ' please adjust the product\'s available quantity.": "Er zijn geen tickets beschikbaar. Als u een product aan deze bezoeker wilt toewijzen, pas dan de beschikbare hoeveelheid van het product aan.",
+	"There are no tickets available. ' .\n                    'If you would like to assign a product to this attendee,' .\n                    ' please adjust the product\\'s available quantity.": "Er zijn geen tickets beschikbaar. Als u een product aan deze bezoeker wilt toewijzen, pas dan de beschikbare hoeveelheid van het product aan.",
 	"The product price ID is invalid.": "De productprijs-ID is ongeldig.",
 	"Product ID is not valid": "Product-ID is niet geldig",
-	"There are no products available. If you would like to assign this product to this attendee, please adjust the product\'s available quantity.": "Er zijn geen producten beschikbaar. Als u dit product aan deze bezoeker wilt toewijzen, pas dan de beschikbare hoeveelheid van het product aan.",
+	"There are no products available. If you would like to assign this product to this attendee, please adjust the product\\'s available quantity.": "Er zijn geen producten beschikbaar. Als u dit product aan deze bezoeker wilt toewijzen, pas dan de beschikbare hoeveelheid van het product aan.",
 	"There is an unexpected product price ID in the order": "Er is een onverwachte productprijs-ID in de bestelling",
 	"Product type cannot be changed as products have been registered for this type": "Producttype kan niet worden gewijzigd omdat producten voor dit type zijn geregistreerd",
 	"The ordered category IDs must exactly match all categories for the event without missing or extra IDs.": "De bestelde categorie-ID's moeten exact overeenkomen met alle categorieën voor het evenement zonder ontbrekende of extra ID's.",
@@ -386,8 +386,8 @@
 	"Offline payments are not enabled for this event": "Offline betalingen zijn niet ingeschakeld voor dit evenement",
 	"There are no products available in this category": "Er zijn geen producten beschikbaar in deze categorie",
 	"Webhook not found": "Webhook niet gevonden",
-	"Unable to check in as attendee :attendee_name\'s order is awaiting payment": "Kan niet inchecken omdat bestelling van bezoeker :attendee_name op betaling wacht",
-	"Attendee :attendee_name\'s order cannot be marked as paid. Please check your event settings": "Bestelling van bezoeker :attendee_name kan niet als betaald worden gemarkeerd. Controleer uw evenementinstellingen",
+	"Unable to check in as attendee :attendee_name\\'s order is awaiting payment": "Kan niet inchecken omdat bestelling van bezoeker :attendee_name op betaling wacht",
+	"Attendee :attendee_name\\'s order cannot be marked as paid. Please check your event settings": "Bestelling van bezoeker :attendee_name kan niet als betaald worden gemarkeerd. Controleer uw evenementinstellingen",
 	"Invoice already exists": "Factuur bestaat al",
 	"Invoice not found": "Factuur niet gevonden",
 	"Order is not awaiting offline payment": "Bestelling wacht niet op offline betaling",
