--- a/frontend/src/locales/nl.po
+++ b/frontend/src/locales/nl.po
@@ -2554,7 +2554,7 @@ msgstr "Laat leeg om het standaardwoord te gebruiken"
 
 #: src/components/routes/welcome/index.tsx:20
 msgid "Let's get started by creating your first organizer"
-msgstr "Laten we beginnen met het maken van je eerste organizer"
+msgstr "Laten we beginnen met het maken van je eerste organisator"
 
 #: src/components/routes/event/EventDashboard/index.tsx:215
 msgid "Link your Stripe account to receive funds from ticket sales."
@@ -2576,7 +2576,7 @@ msgstr "Locatie"
 
 #: src/components/routes/auth/Login/index.tsx:84 src/components/routes/auth/Register/index.tsx:71
 msgid "Log in"
-msgstr "Inloggen"
+msgstr "Log in"
 
 #: src/components/routes/auth/Login/index.tsx:84
 msgid "Logging in"
@@ -3142,7 +3142,7 @@ msgstr "Bestelnotities"
 
 #: src/components/common/MessageList/index.tsx:23
 msgid "Order owner"
-msgstr "Eigenaar bestellen"
+msgstr "Eigenaar bestelling"
 
 #: src/components/modals/SendMessageModal/index.tsx:191
 msgid "Order owners with a specific product"
@@ -3154,7 +3154,7 @@ msgstr "Besteleigenaars met producten"
 
 #: src/components/common/QuestionsTable/index.tsx:313 src/components/common/QuestionsTable/index.tsx:355
 msgid "Order questions"
-msgstr "Vragen bestellen"
+msgstr "Vragen bestelling"
 
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:112
 msgid "Order Reference"
@@ -4225,7 +4225,7 @@ msgstr "Slim Dashboard"
 
 #: src/components/routes/auth/Register/index.tsx:90
 msgid "Smith"
-msgstr "Smith"
+msgstr "Jansen"
 
 #: src/components/common/ProductPriceAvailability/index.tsx:9
 #: src/components/common/ProductPriceAvailability/index.tsx:32
