Fix invalid JSON and typos

--- a/backend/lang/it.json
+++ b/backend/lang/it.json
@@ -2,7 +2,7 @@
     "Older First": "Prima il più vecchio",
     "Newer First": "Prima il più recente",
     "Recently Updated First": "Aggiornato di recente per primo",
-    "Recently Updated Last": "ggiornato di recente per ultimo",
+    "Recently Updated Last": "Aggiornato di recente per ultimo",
     "First Name A-Z": "Nome A-Z",
     "First Name Z-A": "Nome Z-A",
     "Last Name A-Z": "Cognome A-Z",
@@ -57,7 +57,7 @@
     "First name is required": "Il nome è obbligatorio",
     "Last name is required": "Il cognome è obbligatorio",
     "Ticket is required": "È richiesto il biglietto",
-    "Ticket price is required": "È richiesto il prezzo del biglietto,
+    "Ticket price is required": "È richiesto il prezzo del biglietto",
     "Please enter a valid hex color code. In the format #000000 or #000.": "Inserisci un codice colore esadecimale valido. Nel formato #000000 o #000.",
     "The maximum timeout is 2 hours.": "Il timeout massimo è 2 ore.",
     "The address line 1 field is required": "Il campo riga indirizzo 1 è obbligatorio",
@@ -121,7 +121,7 @@
     "Cannot check in attendee as they are not active.": "Non è possibile effettuare il check-in del partecipante perché non è attivo.",
     "in": "en",
     "out": "uscire",
-    "There are no tickets available. ' .\n                    'If you would like to assign a ticket to this attendee,' .\n                    ' please adjust the ticket\\'s available quantity.": "Non ci sono biglietti disponibili. ' .\n 'Se desideri assegnare un biglietto a questo partecipante,' .\n ' modifica la quantità disponibile dei biglietti."
+    "There are no tickets available. ' .\n                    'If you would like to assign a ticket to this attendee,' .\n                    ' please adjust the ticket\\'s available quantity.": "Non ci sono biglietti disponibili. ' .\n 'Se desideri assegnare un biglietto a questo partecipante,' .\n ' modifica la quantità disponibile dei biglietti.",
     "The ticket price ID is invalid.": "L'ID del prezzo del biglietto non è valido.",
     "Ticket ID is not valid": "L'ID del biglietto non è valido",
     "There are no tickets available. If you would like to assign this ticket to this attendee, please adjust the ticket\\'s available quantity.": "Non ci sono biglietti disponibili. Se desideri assegnare questo biglietto a questo partecipante, modifica la quantità disponibile.",
@@ -270,7 +270,7 @@
     "Price is sold out": "Il prezzo è esaurito",
     "Price is hidden": "Il prezzo è nascosto",
     "Expires soonest": "Scade a breve",
-    "Expires latest": "Scade più tardi,
+    "Expires latest": "Scade più tardi",
     "The expiration date must be after the activation date.": "La data di scadenza deve essere successiva alla data di attivazione.",
     "The activation date must be before the expiration date.": "La data di attivazione deve essere antecedente alla data di scadenza.",
     "Attendee :attendee_name is not allowed to check in using this check-in list": "Il partecipante :attendee_name non è autorizzato a effettuare il check-in utilizzando questa  lista di check-in",
@@ -291,7 +291,7 @@
     "You must select a product category.": "Devi selezionare una categoria di prodotto.",
     "Invalid direction. Must be either asc or desc": "Direzione non valida. Deve essere asc o disc.",
     "DomainObject must be a valid :interface.": "L'oggetto dominio deve essere un'interfaccia valida.",
-    "Nested relationships must be an array of Relationship objects.": Le relazioni annidate devono essere un array di oggetti Relazione.",
+    "Nested relationships must be an array of Relationship objects.": "Le relazioni annidate devono essere un array di oggetti Relazione.",
     "OrderAndDirections must be an array of OrderAndDirection objects.": "OrderAndDirections deve essere un array di oggetti OrderAndDirection.",
     "Attendee :attendee_name\\'s product is cancelled": "Il prodotto del partecipante :attendee_name è annullato.",
     "Tickets": "Biglietti",
@@ -397,7 +397,7 @@
     "Address line 1 is required": "Riga indirizzo 1 obbligatoria",
     "City is required": "Città richiesta",
     "Zip or postal code is required": "Codice postale richiesto",
-    "Country is required": "Ppaese richiesto",
+    "Country is required": "Paese richiesto",
     "If you did not request a password reset, please immediately reset your password.": "Se non hai richiesto la reimpostazione della password, reimpostala immediatamente.",
     "ℹ️ Your order is pending payment. Tickets have been issued but will not be valid until payment is received.": "ℹ️ Il tuo ordine è in attesa di pagamento. I biglietti sono stati emessi, ma non saranno validi fino alla ricezione del pagamento.",
     "ℹ️ This order is pending payment. Please mark the payment as received on the order management page once payment is received.": "ℹ️ Questo ordine è in attesa di pagamento. Si prega di contrassegnarlo come pagato nella pagina di gestione degli ordini una volta ricevuto il pagamento.",
