Update organizer sections on event and organizer page

--- a/frontend/src/locales/de.po
+++ b/frontend/src/locales/de.po
@@ -5788,7 +5788,7 @@ msgid "We couldn't reorder the categories. Please try again."
 msgstr "Wir konnten die Kategorien nicht neu ordnen. Bitte versuchen Sie es erneut."
 
 #: src/components/routes/event/HomepageDesigner/index.tsx:118
-msgid "We recommend dimensions of 2160px by 1080px, and a maximum file size of 5MB"
+msgid "We recommend dimensions of 1950px by 650px, a ratio of 3:1, and a maximum file size of 5MB"
 msgstr "Wir empfehlen Abmessungen von 2160 x 1080 Pixel und eine maximale Dateigröße von 5 MB."
 
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:42
