--- a/frontend/src/locales/es.po
+++ b/frontend/src/locales/es.po
@@ -5788,7 +5788,7 @@ msgid "We couldn't reorder the categories. Please try again."
 msgstr "No pudimos reordenar las categorías. Por favor, inténtelo de nuevo."
 
 #: src/components/routes/event/HomepageDesigner/index.tsx:118
-msgid "We recommend dimensions of 2160px by 1080px, and a maximum file size of 5MB"
+msgid "We recommend dimensions of 1950px by 650px, a ratio of 3:1, and a maximum file size of 5MB"
 msgstr "Recomendamos dimensiones de 2160 px por 1080 px y un tamaño de archivo máximo de 5 MB."
 
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:42
