--- a/frontend/src/locales/ru.po
+++ b/frontend/src/locales/ru.po
@@ -6372,7 +6372,7 @@ msgid "We couldn't reorder the categories. Please try again."
 msgstr ""
 
 #: src/components/routes/event/HomepageDesigner/index.tsx:118
-msgid "We recommend dimensions of 2160px by 1080px, and a maximum file size of 5MB"
+msgid "We recommend dimensions of 1950px by 650px, a ratio of 3:1, and a maximum file size of 5MB"
 msgstr ""
 
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:42
