Update German translations

--- a/frontend/src/locales/de.po
+++ b/frontend/src/locales/de.po
@@ -96,7 +96,7 @@ msgstr "{hours} Stunden, {minutes} Minuten und {seconds} Sekunden"
 
 #: src/components/common/Countdown/index.tsx:72
 msgid "{minutes} minutes and {seconds} seconds"
-msgstr "{Minuten} Minuten und {Sekunden} Sekunden"
+msgstr "{minutes} Minuten und {seconds} Sekunden"
 
 #: src/components/routes/welcome/index.tsx:59
 msgid "{organizerName}'s first event"
@@ -2896,7 +2896,7 @@ msgstr "Nachname"
 #: src/components/routes/product-widget/CollectInformation/index.tsx:401
 #: src/components/routes/profile/ManageProfile/index.tsx:137
 msgid "Last Name"
-msgstr "Familienname, Nachname"
+msgstr "Nachname"
 
 #: src/components/common/WebhookTable/index.tsx:239
 msgid "Last Response"
@@ -2953,7 +2953,7 @@ msgstr "Anmelden"
 msgid "Logging in"
 msgstr "Einloggen"
 
-#: src/components/routes/auth/Register/index.tsx:70
+#: src/components/routes/auth/Register/index.tsx:53
 #~ msgid "Login"
 #~ msgstr "Anmelden"
 
@@ -3951,7 +3951,7 @@ msgstr "Checkout-Nachricht veröffentlichen"
 
 #: src/components/common/PoweredByFooter/index.tsx:28
 msgid "Powered by"
-msgstr "Angetrieben von"
+msgstr "Powered by"
 
 #: src/components/forms/StripeCheckoutForm/index.tsx:137
 #~ msgid "Powered by Stripe"
